Fixed a few bugs

--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -67,7 +67,7 @@
         <div class="emtpy">
             <section class="hero">
                 <h1>Web Development & IT Consulting</h1>
-                <a href="#articles"><img src="https://www.flaticon.com/svg/vstatic/svg/1082/1082797.svg?token=exp=1618164480~hmac=22db44dc24770cbd8d4d666b3bc5190e" alt="mouse"></a>  
+                <a class="hero__mouse" href="#articles"><img src="https://www.flaticon.com/svg/vstatic/svg/875/875492.svg?token=exp=1618307917~hmac=70e2a852d6569b44f6b40a20a4a0975e" alt="mouse"></a>  
             </section>
         </div>
     </header>
@@ -187,8 +187,6 @@
             <div class="working__articles">
             <div class="working__article1">
                 <div class="working__article">
-
-                
                 <h1>ФАЗА 1 - КРЕАТИВНА ДИСКУСИЈА</h1>
                 <p>Важно нам је да разумемо вашу визију и пројектне циљеве, стога практикујемо да вас пажљиво саслушамо пре почетка рада на пројекту. Од виталног је значаја да сваки пројекат буде добро вођен како би се осигурао квалитет услуге што укључује стварање основа за даље развијање сарадње.</p>
             </div>
