Fixed some minor issues

--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -72,7 +72,8 @@
         <div class="emtpy">
             <section class="hero">
                 <h1 class="hero__header">Web Development & IT Consulting</h1>
-                <a class="hero__mouse" href="#articles"><i class="fas fa-mouse-pointer fa-3x"></i></a>  
+                <a class="hero__mouse" href="#articles"><div class="mouse"><div class="mouse__dot"></div></div>
+                </a>  
             </section>
         </div>
     </header>
@@ -108,7 +109,6 @@
             </div>
         </div>
         <div id="articles" class="articles">
-        
         <article id="why" class="why">
                 <div class="why__back"><h1><span class="overline">ЗАШ</span>ТО ИЗАБРАТИ QUANTOX?</h1></div>
                 <div class="why__text">
@@ -127,66 +127,77 @@
         </article>
         <article id="service" class="service">
             <h1><span class="overline">НАШ</span>Е УСЛУГЕ</h1>
-            <ul class="hex-grid__list">
+            <div class="service__text">
+                <ul class="hex-grid__list">
+                    <a href="#">
+                    <li class="hex-grid__item hex-1">
+                        <div class="hex-grid__content">
+                            РАЗВОЈ МОБИЛНОХ АПЛИКАЦИЈА
+                        </div>
+                    </li>
+                </a>
                 <a href="#">
-                <li class="hex-grid__item hex-1">
-                    <div class="hex-grid__content">
-                        РАЗВОЈ МОБИЛНОХ АПЛИКАЦИЈА
-                    </div>
-                </li>
-            </a>
-                <li class="hex-grid__item hex-2">
-                    <div class="hex-grid__content">
-                        АДМИНИСТРАТОР
-                    </div>
-                </li>
-                <li class="hex-grid__item hex-3">
-                    <div class="hex-grid__content">
-                        BACK END ПРОГРАМИРАЊЕ
-                    </div>
-                </li>
-                <li class="hex-grid__item hex-4">
-                    <div class="hex-grid__content">
-                        КОНСАЛТИНГ
-                    </div>
-                </li>
-                <li class="hex-grid__item hex-5">
-                    <div class="hex-grid__content">
-                        FRONT END ПРОГРАМИРАЊЕ
-                    </div>
-                </li>
-                <li class="hex-grid__item hex-6">
-                    <div class="hex-grid__content">
-                        ВЕБ ДИЗАЈН
-                    </div>
-                </li>
-                <li class="hex-grid__item hex-7">
-                    <div class="hex-grid__content">
-                        ПОДРШКА
-                    </div>
-                </li>
-                <li class="hex-grid__item hex-8">
-                    <div class="hex-grid__content">
-                        ВИРТУЕЛНИ АСИСТЕНТИ
-                    </div>
-                </li>
-                <li class="hex-grid__item hex-9">
-                    <div class="hex-grid__content">
-                        КОРИСНИШКА ПОДРШКА
-                    </div>
-                </li>
-                <li class="hex-grid__item hex-10">
-                    <div class="hex-grid__content">
-                        АУТОРСКА ПРАВА
-                    </div>
-                </li>
-                <li class="hex-grid__item hex-11">
-                    <div class="hex-grid__content">
-                        ВИДЕО МОНТАЖА
-                    </div>
-                </li>
-            </ul>
-
+                    <li class="hex-grid__item hex-2">
+                        <div class="hex-grid__content">
+                            АДМИНИСТРАТОР
+                        </div>
+                    </li></a>
+                    <a href="#">
+                    <li class="hex-grid__item hex-3">
+                        <div class="hex-grid__content">
+                            BACK END ПРОГРАМИРАЊЕ
+                        </div>
+                    </li></a>
+                    <a href="#">
+                    <li class="hex-grid__item hex-4">
+                        <div class="hex-grid__content">
+                            КОНСАЛТИНГ
+                        </div>
+                    </li></a>
+                    <a href="#">
+                    <li id="hex-5" class="hex-grid__item hex-5">
+                        <div class="hex-grid__content">
+                            FRONT END ПРОГРАМИРАЊЕ
+                        </div>
+                    </li></a>
+                    <a href="#">
+                    <li class="hex-grid__item hex-6">
+                        <div class="hex-grid__content">
+                            ВЕБ ДИЗАЈН
+                        </div>
+                    </li></a>
+                    <a href="#">
+                    <li class="hex-grid__item hex-7">
+                        <div class="hex-grid__content">
+                            ПОДРШКА
+                        </div>
+                    </li></a>
+                    <a href="#">
+                    <li class="hex-grid__item hex-8">
+                        <div class="hex-grid__content">
+                            ВИРТУЕЛНИ АСИСТЕНТИ
+                        </div>
+                    </li></a>
+                    <a href="#">
+                    <li class="hex-grid__item hex-9">
+                        <div class="hex-grid__content">
+                            КОРИСНИШКА ПОДРШКА
+                        </div>
+                    </li></a>
+                    <a href="#">
+                    <li class="hex-grid__item hex-10">
+                        <div class="hex-grid__content">
+                            АУТОРСКА ПРАВА
+                        </div>
+                    </li></a>
+                    <a href="#">
+                    <li class="hex-grid__item hex-11">
+                        <div class="hex-grid__content">
+                            ВИДЕО МОНТАЖА
+                        </div>
+                    </li></a>
+                </ul>
+            </div>
         </article>
         <article id="working" class="working">
             <div class="working__back"><h1><span class="overline">ПРО</span>ЦЕС РАДА</h1></div>
@@ -227,9 +238,9 @@
     </main>
 </div>
     <footer id="foter">
-        <div class="form__container">        
+        <div class="form__container">
+        <h1><span class="overline att">ПРИ</span>ЈАВИТЕ СЕ НА НАШУ Е-МАИЛ ЛИСТУ</h1>       
         <div class="form">
-            <h1><span class="overline att">ПРИ</span>ЈАВИТЕ СЕ НА НАШУ Е-МАИЛ ЛИСТУ</h1>
         <form >
             <input type="email" name="email" id="email" placeholder="Ваш Е-маил">
             <button>ПРИЈАВИ СЕ</button>
