--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -8,11 +8,12 @@
     <title>Quantox pocetna</title>
 </head>
 <body>
-    <nav id="navi">
+    <div id="root">
+    <!-- <nav id="navi">
         <i id="close" class="nav__close fas fa-times fa-3x"></i>    
         <div class="navigation">
             <div class="nav__logo">
-                <img src="https://quantox.com/assets/img/logo-menu.png" alt="logo">
+                <img src="https://quantox.com/assets/img/logo-menu.png" alt="logo" />
             </div>
             <div class="nav">
                 <a href="#">Почетна страна</a>
@@ -47,7 +48,7 @@
     <header>
         <div class="header">
             <div class="logo">
-                <img src="https://quantox.com/assets/img/logo.png" alt="Logo">
+                <img src="https://quantox.com/assets/img/logo.png" alt="Logo" />
             </div>
             <div class="header__right">
                 <div class="languages">
@@ -58,11 +59,6 @@
                     <a href="#">мк  |</a>
                     <a href="#">хеб</a>
                 </div>
-                
-                <!--To be added <div class="themes">
-                    <span id="inverted">Inverted</span>
-                    <span id="random">Random</span>
-                </div> -->
                 <div id="hamburger" class="ham_menu">
                     <i class="fas fa-bars fa-3x"></i>
                 </div>
@@ -79,7 +75,7 @@
     </header>
     <main>
         <div id="naviLeft" class="main__nav">
-            <img id="navLogo" src="https://quantox.com/assets/img/logo-menu.png" alt="Logo">
+            <img id="navLogo" src="https://quantox.com/assets/img/logo-menu.png" alt="Logo" />
             <div id="naviLeftnav" class="nav">
                 <a class="navA" id="navLink1" href="#">Услуге</a>
                 <a class="navA" id="navLink2" href="#">Портфолио</a>
@@ -242,14 +238,14 @@
         <h1><span class="overline att">ПРИ</span>ЈАВИТЕ СЕ НА НАШУ Е-МАИЛ ЛИСТУ</h1>       
         <div class="form">
         <form >
-            <input type="email" name="email" id="email" placeholder="Ваш Е-маил">
+            <input type="email" name="email" id="email" placeholder="Ваш Е-маил" />
             <button>ПРИЈАВИ СЕ</button>
         </form>
         </div>
         </div>
         <div class="links">
             <div class="links__container">
-                <img src="https://quantox.com/assets/img/logo-services.png" alt="Logo">
+                <img src="https://quantox.com/assets/img/logo-services.png" alt="Logo" />
         <div class="nav">
             <a href="#">Услуге</a>
             <a href="#">Портфолио</a>
@@ -274,5 +270,7 @@
             <p><a href="#"><span>Мапа Сајта</span></a></p>
         </div>
     </footer>
+     -->
+</div>
 </body>
 </html>
